--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,8 +16,10 @@ jobs:
       - name: Config env
         run: |
           curl https://mise.run | sh
-          echo 'eval "$(~/.local/bin/mise activate bash --shims)"' >> ~/.bashrc && source ~/.bashrc
-      - name: Run check
+          echo 'eval "$(~/.local/bin/mise activate bash --shims)"' >> ~/.bashrc
+          export PATH="$HOME/.mise/bin:$PATH"
+          source ~/.bashrc
+      - name: Install deps
         run: |
           mise install
       - name: Run check
