--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "publisher": "guzhongren",
   "LICENSE": "MIT",
   "version": "0.0.4",
+  "icon": "./icons/icon.drawio.png",
   "engines": {
     "vscode": "^1.95.0"
   },
