--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "repository": "https://github.com/guzhongren/thoughtworks-styled-vscode-theme",
   "publisher": "guzhongren",
   "LICENSE": "MIT",
-  "version": "0.0.4",
-  "icon": "./icons/icon.drawio.png",
+  "version": "0.0.5",
+  "icon": "icons/icon.drawio.png",
   "engines": {
     "vscode": "^1.95.0"
   },
