ci: fix actions

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           mise install
           mise use -g pre-commit
+          eval "$(~/.local/bin/mise activate bash --shims)"
       - name: Run check
         run: |
           pre-commit -- run --all-files --hook-stage pre-commit
