ci: fix actions

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Run check
         run: |
           eval "$(~/.local/bin/mise activate bash --shims)"
-          pre-commit -- run --all-files --hook-stage pre-commit
-          pre-commit -- run --all-files --hook-stage pre-push
+          pre-commit run --all-files --hook-stage pre-commit
+          pre-commit run --all-files --hook-stage pre-push
