--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -22,3 +22,23 @@ jobs:
         run: echo "/home/runner/.local/bin" >> $GITHUB_PATH
       - uses: actions/setup-python@v6
       - uses: pre-commit/action@v3.0.1
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: git-hooks
+    if: github.ref == 'refs/tags/'
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "lts/*"
+      - name: Install pnpm
+        run: npm install -g pnpm
+
+      - name: Install dependencies
+        run: pnpm install --ignore-scripts
+      - name: Release Extension
+        env:
+          VSCE_PAT: ${{ secrets.VSCE_PAT }}
+        run: bash ./scripts/release
