--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,10 +2,13 @@ name: Check
 
 on:
   push:
-    branches: ["*"]
-    tags: ["v*"]
+    branches:
+      - "*"
+    tags:
+      - 'v*'
   pull_request:
-    branches: ["main"]
+    branches:
+      - "main"
   workflow_dispatch:
 
 jobs:
@@ -27,7 +30,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     needs: git-hooks
-    if: github.ref == 'refs/tags/'
+    if: startsWith(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@v4
       - name: Setup Node.js
