ci: add release note

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -46,3 +46,9 @@ jobs:
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
         run: bash ./scripts/release
+      - name: Release note
+        uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          generate_release_notes: true
